Closed
Bug 614988
Opened 15 years ago
Closed 15 years ago
"ASSERTION: We should never try to use the editor if we're not initialized unless we're being initialized"
Categories
(Core :: DOM: Editor, defect)
Tracking
()
RESOLVED
FIXED
mozilla2.0b8
People
(Reporter: jruderman, Assigned: ehsan.akhgari)
References
Details
(Keywords: assertion, regression, testcase)
Attachments
(3 files)
|
269 bytes,
text/html
|
Details | |
|
3.80 KB,
text/plain
|
Details | |
|
2.48 KB,
patch
|
bzbarsky
:
review+
roc
:
approval2.0+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: We should never try to use the editor if we're not initialized unless we're being initialized: 'mEditorInitialized || mInitializing', file content/html/content/src/nsTextEditorState.cpp, line 1717
This assertion was added in:
changeset: a664aa828e62
user: Ehsan Akhgari
date: Mon Nov 22 03:12:56 2010 -0500
summary: Bug 611189 - Parchment IF Reader Misbehaves; r=bzbarsky
| Reporter | ||
Comment 1•15 years ago
|
||
| Assignee | ||
Comment 2•15 years ago
|
||
Hmm, this assertion doesn't apply to textarea's, but I forgot to exclude them in the original patch. :(
Comment 3•15 years ago
|
||
Comment on attachment 493443 [details] [diff] [review]
Patch (v1)
How about just adding "!IsSingleLineTextControl() ||" to the start of the assert condition?
r=me either way, I guess.
Attachment #493443 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 4•15 years ago
|
||
(In reply to comment #3)
> Comment on attachment 493443 [details] [diff] [review]
> Patch (v1)
>
> How about just adding "!IsSingleLineTextControl() ||" to the start of the
> assert condition?
That would make it even less readable than it currently is...
| Assignee | ||
Updated•15 years ago
|
Attachment #493443 -
Flags: approval2.0?
Attachment #493443 -
Flags: approval2.0? → approval2.0+
Comment 5•15 years ago
|
||
OK, don't worry about it, then. I guess I find a complex-ish conditional more readable than some ifdefs and ifs, but that may just be habit. ;)
| Assignee | ||
Updated•15 years ago
|
Whiteboard: [needs landing]
| Assignee | ||
Comment 6•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [needs landing]
Target Milestone: --- → mozilla2.0b8
You need to log in
before you can comment on or make changes to this bug.
Description
•