Bug 614988 - "ASSERTION: We should never try to use the editor if we're not initialized unless we're being initialized" should not apply to textarea's; r=bzbarsky a=roc